Bug 633044 - Special case empty text frames to position the caret at the correct position; r=roc a=blocking-final+