layout/generic/nsTextFrame.h
@@ -467,6 +467,8 @@ protected:
   void ClearFrameOffsetCache();
 
   virtual PRBool HasAnyNoncollapsedCharacters();
+
+  void ClearMetrics(nsHTMLReflowMetrics& aMetrics);
 };
 
 #endif
